--- a/TKV2025_soubory/stylesheet.css
+++ b/TKV2025_soubory/stylesheet.css
@@ -14,7 +14,7 @@ br
 	text-decoration:none;
 	font-family:Calibri, sans-serif;
 	mso-font-charset:238;
-	mso-style-name:"20 % â€“ ZvÃ½raznÄ›nÃ­ 1";
+	mso-style-name:"20 % – Zvıraznìní 1";
 	mso-style-id:30;}
 .style18
 	{background:#F2DCDB;
@@ -26,11 +26,11 @@ br
 	text-decoration:none;
 	font-family:Calibri, sans-serif;
 	mso-font-charset:238;
-	mso-style-name:"20 % â€“ ZvÃ½raznÄ›nÃ­ 2";
+	mso-style-name:"20 % – Zvıraznìní 2";
 	mso-style-id:34;}
 .style16
-	{mso-number-format:"_-* \#\,\#\#0\.00\\ \0022KÄ\0022_-\;\\-* \#\,\#\#0\.00\\ \0022KÄ\0022_-\;_-* \0022-\0022??\\ \0022KÄ\0022_-\;_-\@_-";
-	mso-style-name:MÄ›na;
+	{mso-number-format:"_-* \#\,\#\#0\.00\\ \0022Kè\0022_-\;\\-* \#\,\#\#0\.00\\ \0022Kè\0022_-\;_-* \0022-\0022??\\ \0022Kè\0022_-\;_-\@_-";
+	mso-style-name:Mìna;
 	mso-style-id:4;}
 .style0
 	{mso-number-format:General;
@@ -49,7 +49,7 @@ br
 	mso-font-charset:238;
 	border:none;
 	mso-protection:locked visible;
-	mso-style-name:NormÃ¡lnÃ­;
+	mso-style-name:Normální;
 	mso-style-id:0;}
 td
 	{mso-style-parent:style0;
@@ -130,7 +130,7 @@ td
 .xl76
 	{mso-style-parent:style16;
 	color:windowtext;
-	mso-number-format:"_-* \#\,\#\#0\\ \0022KÄ\0022_-\;\\-* \#\,\#\#0\\ \0022KÄ\0022_-\;_-* \0022-\0022??\\ \0022KÄ\0022_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \0022Kè\0022_-\;\\-* \#\,\#\#0\\ \0022Kè\0022_-\;_-* \0022-\0022??\\ \0022Kè\0022_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;}
 .xl77
@@ -157,7 +157,7 @@ td
 	{mso-style-parent:style0;
 	color:windowtext;
 	font-weight:700;
-	mso-number-format:"0\0022 muÅ¾Å¯\0022";
+	mso-number-format:"0\0022 muù\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
@@ -165,7 +165,7 @@ td
 	{mso-style-parent:style0;
 	color:windowtext;
 	font-weight:700;
-	mso-number-format:"0\0022 Å¾en\0022";
+	mso-number-format:"0\0022 en\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
@@ -185,27 +185,27 @@ td
 .xl84
 	{mso-style-parent:style17;
 	font-weight:700;
-	mso-number-format:"0\0022 muÅ¾Å¯ a Å¾en\0022";
+	mso-number-format:"0\0022 muù a en\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
 .xl85
 	{mso-style-parent:style0;
 	color:windowtext;
-	mso-number-format:"_-* \#\,\#\#0\\ \0022KÄ\0022_-\;\\-* \#\,\#\#0\\ \0022KÄ\0022_-\;_-* \0022-\0022??\\ \0022KÄ\0022_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \0022Kè\0022_-\;\\-* \#\,\#\#0\\ \0022Kè\0022_-\;_-* \0022-\0022??\\ \0022Kè\0022_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;}
 .xl86
 	{mso-style-parent:style17;
 	font-weight:700;
-	mso-number-format:"0\0022 muÅ¾Å¯\0022";
+	mso-number-format:"0\0022 muù\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
 .xl87
 	{mso-style-parent:style17;
 	font-weight:700;
-	mso-number-format:"0\0022 Å¾en\0022";
+	mso-number-format:"0\0022 en\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
@@ -213,7 +213,7 @@ td
 	{mso-style-parent:style16;
 	color:white;
 	font-weight:700;
-	mso-number-format:"_-* \#\,\#\#0\\ \0022KÄ\0022_-\;\\-* \#\,\#\#0\\ \0022KÄ\0022_-\;_-* \0022-\0022??\\ \0022KÄ\0022_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \0022Kè\0022_-\;\\-* \#\,\#\#0\\ \0022Kè\0022_-\;_-* \0022-\0022??\\ \0022Kè\0022_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;
@@ -223,7 +223,7 @@ td
 	{mso-style-parent:style0;
 	color:windowtext;
 	font-weight:700;
-	mso-number-format:"0\0022 muÅ¾Å¯ a Å¾en\0022";
+	mso-number-format:"0\0022 muù a en\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
@@ -288,7 +288,7 @@ td
 .xl98
 	{mso-style-parent:style17;
 	font-weight:700;
-	mso-number-format:"_-* \#\,\#\#0\\ \[$KÄ-405\]_-\;\\-* \#\,\#\#0\\ \[$KÄ-405\]_-\;_-* \0022-\0022??\\ \[$KÄ-405\]_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \[$Kè-405\]_-\;\\-* \#\,\#\#0\\ \[$Kè-405\]_-\;_-* \0022-\0022??\\ \[$Kè-405\]_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;}
 .xl99
@@ -306,7 +306,7 @@ td
 .xl100
 	{mso-style-parent:style17;
 	font-weight:700;
-	mso-number-format:"0\0022 muÅ¾Å¯ a Å¾en\0022";
+	mso-number-format:"0\0022 muù a en\0022";
 	text-align:center;
 	vertical-align:middle;}
 .xl101
@@ -347,7 +347,7 @@ td
 	vertical-align:middle;}
 .xl105
 	{mso-style-parent:style16;
-	mso-number-format:"_-* \#\,\#\#0\\ \0022KÄ\0022_-\;\\-* \#\,\#\#0\\ \0022KÄ\0022_-\;_-* \0022-\0022??\\ \0022KÄ\0022_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \0022Kè\0022_-\;\\-* \#\,\#\#0\\ \0022Kè\0022_-\;_-* \0022-\0022??\\ \0022Kè\0022_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;}
 .xl106
@@ -358,7 +358,7 @@ td
 	vertical-align:middle;}
 .xl107
 	{mso-style-parent:style0;
-	mso-number-format:"_-* \#\,\#\#0\\ \0022KÄ\0022_-\;\\-* \#\,\#\#0\\ \0022KÄ\0022_-\;_-* \0022-\0022??\\ \0022KÄ\0022_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \0022Kè\0022_-\;\\-* \#\,\#\#0\\ \0022Kè\0022_-\;_-* \0022-\0022??\\ \0022Kè\0022_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;}
 .xl108
@@ -422,7 +422,7 @@ td
 	{mso-style-parent:style16;
 	color:white;
 	font-weight:700;
-	mso-number-format:"_-* \#\,\#\#0\\ \0022KÄ\0022_-\;\\-* \#\,\#\#0\\ \0022KÄ\0022_-\;_-* \0022-\0022??\\ \0022KÄ\0022_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \0022Kè\0022_-\;\\-* \#\,\#\#0\\ \0022Kè\0022_-\;_-* \0022-\0022??\\ \0022Kè\0022_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;
@@ -431,19 +431,19 @@ td
 .xl115
 	{mso-style-parent:style16;
 	font-weight:700;
-	mso-number-format:"_-* \#\,\#\#0\\ \0022KÄ\0022_-\;\\-* \#\,\#\#0\\ \0022KÄ\0022_-\;_-* \0022-\0022??\\ \0022KÄ\0022_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \0022Kè\0022_-\;\\-* \#\,\#\#0\\ \0022Kè\0022_-\;_-* \0022-\0022??\\ \0022Kè\0022_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
 .xl116
 	{mso-style-parent:style0;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;}
 .xl117
 	{mso-style-parent:style0;
 	font-weight:700;
-	mso-number-format:"0\0022 Å¾en\0022";
+	mso-number-format:"0\0022 en\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
@@ -464,7 +464,7 @@ td
 	mso-pattern:black none;}
 .xl120
 	{mso-style-parent:style16;
-	mso-number-format:"_-* \#\,\#\#0\\ \0022KÄ\0022_-\;\\-* \#\,\#\#0\\ \0022KÄ\0022_-\;_-* \0022-\0022??\\ \0022KÄ\0022_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \0022Kè\0022_-\;\\-* \#\,\#\#0\\ \0022Kè\0022_-\;_-* \0022-\0022??\\ \0022Kè\0022_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
@@ -477,7 +477,7 @@ td
 	mso-pattern:black none;}
 .xl122
 	{mso-style-parent:style17;
-	mso-number-format:"_-* \#\,\#\#0\\ \[$KÄ-405\]_-\;\\-* \#\,\#\#0\\ \[$KÄ-405\]_-\;_-* \0022-\0022??\\ \[$KÄ-405\]_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \[$Kè-405\]_-\;\\-* \#\,\#\#0\\ \[$Kè-405\]_-\;_-* \0022-\0022??\\ \[$Kè-405\]_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;
@@ -493,14 +493,14 @@ td
 .xl124
 	{mso-style-parent:style0;
 	font-weight:700;
-	mso-number-format:"0\0022 muÅ¾Å¯\0022";
+	mso-number-format:"0\0022 muù\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
 .xl125
 	{mso-style-parent:style0;
 	font-weight:700;
-	mso-number-format:"0\0022 muÅ¾Å¯\0022";
+	mso-number-format:"0\0022 muù\0022";
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
@@ -518,26 +518,26 @@ td
 .xl127
 	{mso-style-parent:style16;
 	font-weight:700;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
 .xl128
 	{mso-style-parent:style16;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
 .xl129
 	{mso-style-parent:style17;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
 .xl130
 	{mso-style-parent:style0;
 	color:windowtext;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
@@ -548,7 +548,7 @@ td
 	{mso-style-parent:style16;
 	color:white;
 	font-weight:700;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;
@@ -556,14 +556,14 @@ td
 	mso-pattern:black none;}
 .xl132
 	{mso-style-parent:style18;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
 .xl133
 	{mso-style-parent:style0;
 	color:windowtext;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
@@ -573,7 +573,7 @@ td
 .xl134
 	{mso-style-parent:style0;
 	color:windowtext;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
@@ -584,7 +584,7 @@ td
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;
@@ -593,25 +593,25 @@ td
 .xl136
 	{mso-style-parent:style0;
 	color:windowtext;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;}
 .xl137
 	{mso-style-parent:style16;
 	color:windowtext;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
 .xl138
 	{mso-style-parent:style16;
 	color:windowtext;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;}
 .xl139
 	{mso-style-parent:style17;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;}
 .xl140
@@ -630,7 +630,7 @@ td
 	font-weight:700;
 	font-family:Calibri, sans-serif;
 	mso-font-charset:0;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;}
 .xl143
@@ -683,7 +683,7 @@ td
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	background:#4F81BD;
@@ -706,7 +706,7 @@ td
 	mso-pattern:black none;}
 .xl150
 	{mso-style-parent:style0;
-	mso-number-format:"_-* \#\,\#\#0\\ \0022KÄ\0022_-\;\\-* \#\,\#\#0\\ \0022KÄ\0022_-\;_-* \0022-\0022\\ \0022KÄ\0022_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \0022Kè\0022_-\;\\-* \#\,\#\#0\\ \0022Kè\0022_-\;_-* \0022-\0022\\ \0022Kè\0022_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;}
 .xl151
@@ -735,7 +735,7 @@ td
 	mso-pattern:black none;}
 .xl154
 	{mso-style-parent:style0;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";}
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";}
 .xl155
 	{mso-style-parent:style0;
 	font-weight:700;
@@ -743,7 +743,7 @@ td
 .xl156
 	{mso-style-parent:style0;
 	font-weight:700;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";}
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";}
 .xl157
 	{mso-style-parent:style0;
 	color:black;
@@ -757,7 +757,7 @@ td
 	mso-font-charset:1;}
 .xl159
 	{mso-style-parent:style0;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
@@ -774,7 +774,7 @@ td
 	{mso-style-parent:style16;
 	font-family:Calibri, sans-serif;
 	mso-font-charset:0;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;}
 .xl162
@@ -805,7 +805,7 @@ td
 	{mso-style-parent:style16;
 	color:white;
 	font-weight:700;
-	mso-number-format:"_-* \#\,\#\#0\\ \0022KÄ\0022_-\;\\-* \#\,\#\#0\\ \0022KÄ\0022_-\;_-* \0022-\0022??\\ \0022KÄ\0022_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \0022Kè\0022_-\;\\-* \#\,\#\#0\\ \0022Kè\0022_-\;_-* \0022-\0022??\\ \0022Kè\0022_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;
 	background:#4F81BD;
@@ -846,7 +846,7 @@ td
 .xl170
 	{mso-style-parent:style16;
 	font-weight:700;
-	mso-number-format:"_-* \#\,\#\#0\\ \0022KÄ\0022_-\;\\-* \#\,\#\#0\\ \0022KÄ\0022_-\;_-* \0022-\0022??\\ \0022KÄ\0022_-\;_-\@_-";
+	mso-number-format:"_-* \#\,\#\#0\\ \0022Kè\0022_-\;\\-* \#\,\#\#0\\ \0022Kè\0022_-\;_-* \0022-\0022??\\ \0022Kè\0022_-\;_-\@_-";
 	text-align:center;
 	vertical-align:middle;}
 .xl171
@@ -1069,7 +1069,7 @@ td
 	border-left:.5pt solid windowtext;}
 .xl192
 	{mso-style-parent:style17;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
@@ -1078,7 +1078,7 @@ td
 	border-left:.5pt solid windowtext;}
 .xl193
 	{mso-style-parent:style17;
-	mso-number-format:"\#\,\#\#0\\ \0022KÄ\0022";
+	mso-number-format:"\#\,\#\#0\\ \0022Kè\0022";
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
@@ -1148,3 +1148,9 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
+.xl201
+	{mso-style-parent:style17;
+	mso-number-format:Fixed;
+	text-align:center;
+	vertical-align:middle;
+	border:.5pt solid windowtext;}
