--- a/TKV2025_soubory/stylesheet.css
+++ b/TKV2025_soubory/stylesheet.css
@@ -871,6 +871,9 @@ td
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
 	text-align:left;
 	background:#4F81BD;
 	mso-pattern:black none;}
@@ -1149,6 +1152,37 @@ td
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
 .xl201
+	{mso-style-parent:style0;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:center;
+	vertical-align:middle;}
+.xl202
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:none;
+	border-bottom:none;
+	border-left:.5pt solid windowtext;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl203
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
+	border-left:none;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl204
 	{mso-style-parent:style17;
 	mso-number-format:Fixed;
 	text-align:center;
