--- a/TKV2025_soubory/stylesheet.css
+++ b/TKV2025_soubory/stylesheet.css
@@ -875,21 +875,15 @@ td
 	border:.5pt solid windowtext;}
 .xl175
 	{mso-style-parent:style0;
-	color:white;
 	font-weight:700;
-	text-align:left;
-	background:#4F81BD;
-	mso-pattern:black none;}
+	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
+	text-align:center;
+	vertical-align:middle;}
 .xl176
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:none;
-	border-left:.5pt solid windowtext;
+	text-align:left;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl177
@@ -899,9 +893,9 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
+	border-right:none;
 	border-bottom:none;
-	border-left:none;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl178
@@ -910,10 +904,10 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
+	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl179
@@ -923,9 +917,9 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
-	border-right:.5pt solid windowtext;
+	border-right:none;
 	border-bottom:.5pt solid windowtext;
-	border-left:none;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl180
@@ -934,16 +928,15 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
+	border-top:none;
+	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
+	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl181
 	{mso-style-parent:style0;
 	color:white;
-	font-size:34.0pt;
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
@@ -956,6 +949,19 @@ td
 .xl182
 	{mso-style-parent:style0;
 	color:white;
+	font-size:34.0pt;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl183
+	{mso-style-parent:style0;
+	color:white;
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
@@ -965,7 +971,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl183
+.xl184
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -977,7 +983,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl184
+.xl185
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -989,14 +995,14 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl185
+.xl186
 	{mso-style-parent:style0;
 	color:windowtext;
 	mso-number-format:"Short Date";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
-.xl186
+.xl187
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -1008,7 +1014,7 @@ td
 	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl187
+.xl188
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -1020,7 +1026,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl188
+.xl189
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1030,7 +1036,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl189
+.xl190
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -1040,19 +1046,6 @@ td
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;
-	background:#4F81BD;
-	mso-pattern:black none;}
-.xl190
-	{mso-style-parent:style0;
-	color:white;
-	font-size:34.0pt;
-	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid black;
-	border-right:none;
-	border-bottom:.5pt solid black;
-	border-left:.5pt solid black;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl191
@@ -1065,10 +1058,23 @@ td
 	border-top:.5pt solid black;
 	border-right:none;
 	border-bottom:.5pt solid black;
-	border-left:none;
+	border-left:.5pt solid black;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl192
+	{mso-style-parent:style0;
+	color:white;
+	font-size:34.0pt;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid black;
+	border-right:none;
+	border-bottom:.5pt solid black;
+	border-left:none;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl193
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1081,7 +1087,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl193
+.xl194
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1089,7 +1095,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl194
+.xl195
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1097,7 +1103,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl195
+.xl196
 	{mso-style-parent:style17;
 	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
 	text-align:center;
@@ -1106,7 +1112,7 @@ td
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:.5pt solid windowtext;}
-.xl196
+.xl197
 	{mso-style-parent:style17;
 	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
 	text-align:center;
@@ -1115,7 +1121,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl197
+.xl198
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1124,7 +1130,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl198
+.xl199
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1133,21 +1139,12 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:none;}
-.xl199
-	{mso-style-parent:style0;
-	color:windowtext;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:none;}
 .xl200
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
+	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;}
@@ -1157,10 +1154,19 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
+	border-left:none;}
+.xl202
+	{mso-style-parent:style0;
+	color:windowtext;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl202
+.xl203
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1169,7 +1175,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl203
+.xl204
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
