--- a/TKV2025_soubory/stylesheet.css
+++ b/TKV2025_soubory/stylesheet.css
@@ -883,12 +883,10 @@ td
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:none;
-	border-left:.5pt solid windowtext;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:left;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl177
@@ -898,9 +896,9 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
+	border-right:none;
 	border-bottom:none;
-	border-left:none;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl178
@@ -909,10 +907,10 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
+	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl179
@@ -922,9 +920,9 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
-	border-right:.5pt solid windowtext;
+	border-right:none;
 	border-bottom:.5pt solid windowtext;
-	border-left:none;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl180
@@ -933,16 +931,15 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
+	border-top:none;
+	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
+	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl181
 	{mso-style-parent:style0;
 	color:white;
-	font-size:34.0pt;
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
@@ -955,6 +952,19 @@ td
 .xl182
 	{mso-style-parent:style0;
 	color:white;
+	font-size:34.0pt;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl183
+	{mso-style-parent:style0;
+	color:white;
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
@@ -964,7 +974,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl183
+.xl184
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -976,7 +986,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl184
+.xl185
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -988,14 +998,14 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl185
+.xl186
 	{mso-style-parent:style0;
 	color:windowtext;
 	mso-number-format:"Short Date";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
-.xl186
+.xl187
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1005,7 +1015,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl187
+.xl188
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -1015,19 +1025,6 @@ td
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;
-	background:#4F81BD;
-	mso-pattern:black none;}
-.xl188
-	{mso-style-parent:style0;
-	color:white;
-	font-size:34.0pt;
-	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid black;
-	border-right:none;
-	border-bottom:.5pt solid black;
-	border-left:.5pt solid black;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl189
@@ -1040,10 +1037,23 @@ td
 	border-top:.5pt solid black;
 	border-right:none;
 	border-bottom:.5pt solid black;
-	border-left:none;
+	border-left:.5pt solid black;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl190
+	{mso-style-parent:style0;
+	color:white;
+	font-size:34.0pt;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid black;
+	border-right:none;
+	border-bottom:.5pt solid black;
+	border-left:none;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl191
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1056,7 +1066,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl191
+.xl192
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1064,7 +1074,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl192
+.xl193
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1072,7 +1082,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl193
+.xl194
 	{mso-style-parent:style17;
 	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
 	text-align:center;
@@ -1081,7 +1091,7 @@ td
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:.5pt solid windowtext;}
-.xl194
+.xl195
 	{mso-style-parent:style17;
 	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
 	text-align:center;
@@ -1090,7 +1100,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl195
+.xl196
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1099,7 +1109,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl196
+.xl197
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1108,21 +1118,12 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:none;}
-.xl197
-	{mso-style-parent:style0;
-	color:windowtext;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:none;}
 .xl198
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
+	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:none;}
@@ -1132,10 +1133,19 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
+	border-left:none;}
+.xl200
+	{mso-style-parent:style0;
+	color:windowtext;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl200
+.xl201
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1144,7 +1154,14 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl201
+.xl202
+	{mso-style-parent:style0;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:center;
+	vertical-align:middle;}
+.xl203
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1153,10 +1170,3 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl202
-	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	text-align:left;
-	background:#4F81BD;
-	mso-pattern:black none;}
