--- a/TKV2026_soubory/stylesheet.css
+++ b/TKV2026_soubory/stylesheet.css
@@ -1097,15 +1097,13 @@ td
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	background:#4F81BD;
-	mso-pattern:black none;}
+	text-align:left;
+	mso-background-source:auto;
+	mso-pattern:#4F81BD none;}
 .xl196
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	mso-background-source:auto;
-	mso-pattern:#4F81BD none;}
+	text-align:left;
+	background:#4F81BD;
+	mso-pattern:black none;}
