--- a/TKV2026_soubory/stylesheet.css
+++ b/TKV2026_soubory/stylesheet.css
@@ -874,6 +874,20 @@ td
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
+	text-align:left;
+	mso-background-source:auto;
+	mso-pattern:#4F81BD none;}
+.xl174
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:left;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl175
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
@@ -882,7 +896,7 @@ td
 	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl174
+.xl176
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -894,7 +908,7 @@ td
 	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl175
+.xl177
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -904,31 +918,6 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;
-	background:#4F81BD;
-	mso-pattern:black none;}
-.xl176
-	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
-	background:#4F81BD;
-	mso-pattern:black none;}
-.xl177
-	{mso-style-parent:style0;
-	color:white;
-	font-size:34.0pt;
-	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl178
@@ -939,20 +928,21 @@ td
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
 	border-right:none;
-	border-bottom:none;
-	border-left:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl179
 	{mso-style-parent:style0;
 	color:white;
+	font-size:34.0pt;
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
+	border-top:.5pt solid windowtext;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
-	border-left:none;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl180
@@ -962,18 +952,23 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:none;
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl181
 	{mso-style-parent:style0;
-	color:windowtext;
-	mso-number-format:"Short Date";
+	color:white;
+	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border:.5pt solid windowtext;}
+	border-top:none;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:none;
+	background:#4F81BD;
+	mso-pattern:black none;}
 .xl182
 	{mso-style-parent:style0;
 	color:white;
@@ -981,13 +976,32 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:.5pt solid windowtext;
-	border-right:none;
+	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl183
 	{mso-style-parent:style0;
+	color:windowtext;
+	mso-number-format:"Short Date";
+	text-align:center;
+	vertical-align:middle;
+	border:.5pt solid windowtext;}
+.xl184
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:none;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl185
+	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
 	font-weight:700;
@@ -996,7 +1010,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl184
+.xl186
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1004,7 +1018,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl185
+.xl187
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1012,7 +1026,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl186
+.xl188
 	{mso-style-parent:style17;
 	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
 	text-align:center;
@@ -1021,7 +1035,7 @@ td
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:.5pt solid windowtext;}
-.xl187
+.xl189
 	{mso-style-parent:style17;
 	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
 	text-align:center;
@@ -1030,7 +1044,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl188
+.xl190
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1039,31 +1053,13 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl189
-	{mso-style-parent:style0;
-	color:windowtext;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:none;
-	border-left:none;}
-.xl190
-	{mso-style-parent:style0;
-	color:windowtext;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:none;}
 .xl191
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
-	border-right:.5pt solid windowtext;
+	border-top:.5pt solid windowtext;
+	border-right:none;
 	border-bottom:none;
 	border-left:none;}
 .xl192
@@ -1071,9 +1067,9 @@ td
 	color:windowtext;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
 	border-left:none;}
 .xl193
 	{mso-style-parent:style0;
@@ -1082,9 +1078,27 @@ td
 	vertical-align:middle;
 	border-top:none;
 	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
+	border-bottom:none;
 	border-left:none;}
 .xl194
+	{mso-style-parent:style0;
+	color:windowtext;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:none;}
+.xl195
+	{mso-style-parent:style0;
+	color:windowtext;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:none;}
+.xl196
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
@@ -1093,17 +1107,3 @@ td
 	border-right:none;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl195
-	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	text-align:center;
-	background:#4F81BD;
-	mso-pattern:black none;}
-.xl196
-	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	text-align:center;
-	mso-background-source:auto;
-	mso-pattern:#4F81BD none;}
