--- a/TKV2026_soubory/stylesheet.css
+++ b/TKV2026_soubory/stylesheet.css
@@ -880,13 +880,6 @@ td
 .xl174
 	{mso-style-parent:style0;
 	color:white;
-	font-weight:700;
-	text-align:left;
-	background:#4F81BD;
-	mso-pattern:black none;}
-.xl175
-	{mso-style-parent:style0;
-	color:white;
 	font-size:34.0pt;
 	font-weight:700;
 	text-align:center;
@@ -894,6 +887,18 @@ td
 	border-top:.5pt solid windowtext;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl175
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border-top:.5pt solid windowtext;
+	border-right:none;
+	border-bottom:none;
 	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
@@ -906,7 +911,7 @@ td
 	border-top:.5pt solid windowtext;
 	border-right:none;
 	border-bottom:none;
-	border-left:.5pt solid windowtext;
+	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl177
@@ -915,10 +920,10 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:.5pt solid windowtext;
+	border-top:none;
 	border-right:none;
-	border-bottom:none;
-	border-left:none;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl178
@@ -930,7 +935,7 @@ td
 	border-top:none;
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
+	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl179
@@ -940,7 +945,7 @@ td
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
-	border-right:none;
+	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;
 	background:#4F81BD;
@@ -951,7 +956,7 @@ td
 	font-weight:700;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
+	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;
@@ -959,24 +964,12 @@ td
 	mso-pattern:black none;}
 .xl181
 	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
-	border-left:none;
-	background:#4F81BD;
-	mso-pattern:black none;}
-.xl182
-	{mso-style-parent:style0;
 	color:windowtext;
 	mso-number-format:"Short Date";
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid windowtext;}
-.xl183
+.xl182
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -988,7 +981,7 @@ td
 	border-left:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl184
+.xl183
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -1000,7 +993,7 @@ td
 	border-left:none;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl185
+.xl184
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
@@ -1010,7 +1003,7 @@ td
 	border:.5pt solid windowtext;
 	background:#4F81BD;
 	mso-pattern:black none;}
-.xl186
+.xl185
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1018,7 +1011,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl187
+.xl186
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;
@@ -1026,7 +1019,7 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;}
-.xl188
+.xl187
 	{mso-style-parent:style17;
 	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
 	text-align:center;
@@ -1035,7 +1028,7 @@ td
 	border-right:none;
 	border-bottom:.5pt solid windowtext;
 	border-left:.5pt solid windowtext;}
-.xl189
+.xl188
 	{mso-style-parent:style17;
 	mso-number-format:"\#\,\#\#0\\ \0022Kč\0022";
 	text-align:center;
@@ -1044,13 +1037,23 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
-.xl190
+.xl189
 	{mso-style-parent:style0;
 	color:white;
 	font-size:34.0pt;
 	font-weight:700;
 	text-align:center;
 	border:.5pt solid windowtext;
+	background:#4F81BD;
+	mso-pattern:black none;}
+.xl190
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:left;
 	background:#4F81BD;
 	mso-pattern:black none;}
 .xl191
@@ -1099,6 +1102,13 @@ td
 	border-bottom:.5pt solid windowtext;
 	border-left:none;}
 .xl196
+	{mso-style-parent:style0;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:center;
+	vertical-align:middle;}
+.xl197
 	{mso-style-parent:style0;
 	color:windowtext;
 	text-align:center;
